# hAIckathon-2025

./: .env.example  .env.template  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  uk_county_flytip_metrics.csv
docs/: architecture_diagram.html  architecture_diagram.mermaid  flow.md  schema.md
src/backend_api/: classify_waste_bag_size.py  council_url.py  fast_api_server.py  generate_summary.py  get_waste_type.py  google_api_integration.py
src/backend_api/supabase/: supabase_database.py
src/backend_api/supabase_integration/: supabase_database.py  supabase_images.py
src/streamlit_poc/: main.py
streamlet-poc/: main.py  pyproject.toml
